# ez-bitflags

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/ez/: BitFlags.hpp
test/: CMakeLists.txt  basic.cpp  multi_namespace.cpp  ops.cpp
test/basic/: CMakeLists.txt  main.cpp
test/ops/: CMakeLists.txt  main.cpp
